--- a/design.css
+++ b/design.css
@@ -125,7 +125,7 @@ body {
 #special-section {
   background-repeat: no-repeat;
   background-size: cover;
-  height: 710px;
+  height: 100vh;
   background-image: url("assets/bg-img/orchid-bg.png");
 }
 
